FullStack-Dev-Test done

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root class="d-flex flex-column min-vh-100"></app-root>
+  <app-root class="d-flex flex-column min-vh-100 p-5"></app-root>
 </body>
 </html>
